--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "peerjs": "^1.5.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "three": "^0.181.2"
   },
